fix(web): put the PDF itself in the card-signed ASiC-E
A card signature for a portal PDF came back as an ASiC-E holding
kontajner.asice, a nested unsigned container, instead of the PDF: the app
packaged the PDF into a container first and the engine wrapped that again.
The portal could not detach the document (500) or join a second signature
into it (Asic join failed, 422). Containers from the phone were fine.

The app now hands the engine the PDF under its real filename, and the
engine builds the ASiC-E for XAdES Baseline B as it already did for
Baseline T instead of falling back to PAdES. The validators accept XAdES
Baseline B on a PDF, which only portals ask for; PAdES Baseline B is
still refused outside eForms.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>